<resources>
    <string name="app_name">My Application</string>
    <string name="bitcoin">Bitcoin</string>
    <string name="_3_45">$3.45</string>
    <string name="details">Details</string>
    <string name="search_cryptocurrency">Search Cryptocurrency</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_page">Main Page fragment</string>
    <string name="welcome_to_cct">Welcome to CCT</string>
    <string name="log_in">Login</string>
    <string name="sign_up">Sign up!</string>
    <string name="f_password">Forgot password?</string>
    <string name="please_pick_a_user_name_or_password">Please pick a user name or password</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="todo">TODO</string>
    <string name="btn_login"></string>
    <string name="backgroundpic">backgroundPic</string>
    <string name="enteremailbutton">enterEmailButton</string>
    <string name="please_enter_your_e_mail">Please enter your E-mail</string>
    <string name="done">Done!</string>
    <string name="et_login_email"></string>
    <string name="et_login_password"></string>
    <string name="et_register_email"></string>
    <string name="et_register_password"></string>
    <string name="price_usd">00.00</string>
    <string name="TwentyFourHour">24hr:</string>
    <string name="TwentyFourHourPercentage">0.00%</string>
    <string name="b_login">LOGIN</string>

    <string name="til_login_email">LOGİN SCREEN</string>
    <string name="register">register</string>

</resources>