<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_margin="20dp"
    app:cardElevation="6dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp">

        <ImageView
            android:id="@+id/image"
            android:layout_width="72dp"
            android:layout_height="82dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_launcher_round"/>

        <TextView
            android:id="@+id/priceUsdText"
            android:layout_width="100dp"
            android:layout_height="25dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/price_usd"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/volume"
            app:layout_constraintTop_toBottomOf="@+id/name"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/volume"
            android:layout_width="150dp"
            android:layout_height="25dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/TwentyFourHour"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/name"
            android:layout_width="100dp"
            android:layout_height="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:text="Name"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/symbol"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/symbol"
            android:layout_width="55dp"
            android:layout_height="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:text="BTC"
            android:textSize="15dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/change"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/change"
            android:layout_width="90dp"
            android:layout_height="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/TwentyFourHourPercentage"
            android:textSize="15dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>